--- a/pages/home-page/invitation-header/invitation-header-wo-css.html
+++ b/pages/home-page/invitation-header/invitation-header-wo-css.html
@@ -2,7 +2,7 @@
 <div class="frame-invitation-header">
     <div class="wrapper-invitation-header">
         <li style="list-style-type: none;">Vitaj, príď sa pozrieť na náš sľub Bohu.</li>
-        <a class="details-invitation-header" target="_blank" href="https://toystory.disney.com/">
+        <a class="details-invitation-header" target="_blank" href="https://www.google.sk/maps/place/Gr%C3%A9ckokatol%C3%ADcky+chr%C3%A1m+Ochrany+Presv%C3%A4tej+Bohorodi%C4%8Dky/@49.0007399,22.226288,18z/data=!4m15!1m8!3m7!1s0x4739503cc091f9d3:0xa7ab3a24efde985d!2zMDY3IDYxIFN0YWvEjcOtbg!3b1!8m2!3d49.0018008!4d22.229107!16s%2Fm%2F026j6yl!3m5!1s0x47394fd783beeff7:0x44889de2548217dc!8m2!3d49.0005645!4d22.2263772!16s%2Fg%2F11hbgjftjl?entry=ttu">
             <i class="fa fa-map-marker" aria-hidden="true"></i>
             Gréckokatolícky chrám ochrany Presvätej Bohorodičky v Stakčíne
         </a>
