--- a/pages/questionnaire-page/forms/domka-form.html
+++ b/pages/questionnaire-page/forms/domka-form.html
@@ -41,7 +41,7 @@
 </div>
 
 <div title="hobbies" style="display: none;" name="questionWrapper">
-    <p>Moje obľúbené činnosti?</p>
+    <p>Moje obľúbené činnosti? (viac správnych)</p>
     <div style="display: flex; justify-content: center;">
         <div class="form-options-radio">
             <label><input type="checkbox" name="hobbies" onchange="addToArray(event, 'hobbies')" value="Pečenie"/> Pečenie</label> <br>
